# epuisement

./: .gitignore  README.md  pyproject.toml
docs/: corpus_summary.csv
output/: 20260602_place_mentions.csv
output/20260608_spatial_full_run/: spatial_mentions.csv
prompts/: 1. initial-prompt.md  2. infra-ordinary-spatial-extraction.md
src/: corpus_summary.py  export_public_place_mentions.py  place_index.py
