[project]
name = "literary-place-index"
version = "0.0.1"
description = "CLI tool for extracting a literary place index from EPUB and PDF files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "ebooklib",
    "llm",
    "pandas",
    "pymupdf",
    "python-dotenv",
    "tenacity",
    "tqdm",
]

[tool.uv]
package = false
