[project]
name = "épuisement"
version = "0.0.2"
description = "CLI tool for extracting a literary place index from EPUB and PDF files from Georges Perec corpus."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "ebooklib",
    "llm",
    "pandas",
    "pymupdf",
    "python-dotenv",
    "tenacity",
    "tqdm",
]

[tool.uv]
package = false
